fixtures/cs-hash-01/bad/sha1-package-import.js
import sha1 from "sha1";

export function hashPassword(password) {
	return sha1(password);
}
